--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,28 +1,30 @@
-server.document-root = "/home/user/light/pages/"
-server.port = "8080"
-server.bind = "127.0.0.1"
-server.username = "ubuntu"
-server.groupname = "www"
-accesslog.filename = "/home/user/light/logs/access"
-server.errorlog = "/home/user/light/logs/error"
-
 server.modules = (
-"mod_redirect",
-"mod_access",
-"mod_setenv",
-"mod_compress",
-"mod_accesslog" )
+	"mod_access",
+	"mod_alias",
+	"mod_compress",
+ 	"mod_redirect",
+#       "mod_rewrite",
+)
 
-mimetype.assign = (
-".css" => "text/css; charset=utf-8"",
-".html" => "text/html; charset=utf-8"",
-".htm" => "text/html; charset=utf-8"",
-".txt" => "text/plain; charset=utf-8"",
-".png" => "image/png; charset=utf-8"",
-".jpg" => "image/jpeg; charset=utf-8"",
-".jpeg" => "image/jpeg; charset=utf-8"",
-".gif" => "image/gif; charset=utf-8",
-".ogg" => "application/ogg; charset=utf-8" )
+server.document-root        = "/var/www/html"
+server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
+server.errorlog             = "/var/log/lighttpd/error.log"
+server.pid-file             = "/var/run/lighttpd.pid"
+server.username             = "www-data"
+server.groupname            = "www-data"
+server.port                 = 8080
 
-static-file.exclude-extensions = ( "~", ".inc" )
-index-file.names = ( "index.html", "index.htm" ) 
+
+index-file.names            = ( "index.php", "index.html", "index.lighttpd.html" )
+url.access-deny             = ( "~", ".inc" )
+static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
+
+compress.cache-dir          = "/var/cache/lighttpd/compress/"
+compress.filetype           = ( "application/javascript", "text/css", "text/html", "text/plain" )
+
+# default listening port for IPv6 falls back to the IPv4 port
+## Use ipv6 if available
+#include_shell "/usr/share/lighttpd/use-ipv6.pl " + server.port
+include_shell "/usr/share/lighttpd/create-mime.assign.pl"
+include_shell "/usr/share/lighttpd/include-conf-enabled.pl"
+
